# MiniCX3

./: .gitignore  CMakeLists.txt  README.md  build_clangmsvc_linux.sh  build_linux.sh  build_windows.sh
Admin/: Admin.sln
Admin/Script/: Script.vcxproj  Script.vcxproj.filters
Admin/ScriptTest/: ScriptTest.vcxproj
Clarabel.cpp_20c32a3/libs/: clarabel_c.dll.lib
Samples/: minic.txt
Script/: CMakeLists.txt  Normal.cpp  Normal.h  ScriptInterface.cpp  ScriptInterface.h  ast.h  ast_adapted.h  common.h  compiler.cpp  compiler.h  config.h  error_handler.h  expression.cpp  expression.h  expression_def.h  vm.cpp  vm.h
ScriptTest/: CMakeLists.txt  test.cpp
Source/: CMakeLists.txt  ast.hpp  ast_adapted.hpp  common.hpp  compiler.cpp  compiler.hpp  config.hpp  error_handler.hpp  expression.cpp  expression.hpp  expression_def.hpp  function.cpp  function.hpp  function_def.hpp  main_calc9.cpp  main_minic.cpp  statement.cpp  statement.hpp  statement_def.hpp  vm.cpp  vm.hpp
